
2024-08-26  Rolf Ade  <rolf@pointsman.de>

        Changed the error messages of the dom, domDoc and domNode
        commands to mostly confirm to ususal Tcl behaviour.

2024-08-14  Rolf Ade  <rolf@pointsman.de>

        Added the asTclValue method to the domDoc and domNode
        commands.

--- Release 0.9.4, 26. Jul 2024 ---

2024-07-02  Rolf Ade  <rolf@pointsman.de>

        Added the isHTML5CustomName method to the dom command. The
        simple HTML reader now accept HTML5 custom element names.
        
2024-06-26  Rolf Ade  <rolf@pointsman.de>

        Enhanced the set of recognised entities to HTML 5.

2024-06-01  Rolf Ade  <rolf@pointsman.de>

        Added an optional replacement string argument to the -replace option of
        the dom command method clearString.

2024-06-01  Rolf Ade  <rolf@pointsman.de>

        Added the -fastcall option to the expat SAX parser.

2024-05-17  Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.6.2.

2024-05-09  Rolf Ade  <rolf@pointsman.de>

        Added the -list option to the selectNodes method (cascading
        XPath expressions).

2023-12-29  Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.5.0.

2023-11-14  Rolf Ade  <rolf@pointsman.de>

        Made tDOM work with Tcl 9.
	
2023-09-28  Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.4.9.

2023-05-09  Rolf Ade  <rolf@pointsman.de>

        The XPath functions floor, ceiling and round now return an
        integer (up to size long). Up to now they appended a .0. It's
        the right thing but it is a user visible change.

2023-03-25  Rolf Ade  <rolf@pointsman.de>

        Added the option -replace to the dom command method
        clearString.

2022-09-11  Rolf Ade  <rolf@pointsman.de>

        Added the node command method getByteIndex. Added the
        submethod byteIndex to the info method of the schema commands.

2022-08-27  Rolf Ade  <rolf@pointsman.de>

        Added the method asCanonicalXML to the domDoc and domNode