@@ -475,8 +475,12 @@ the created text node will have that JSON type. The syntax of the
 created command is:</p>
 
 <syntax>
-<cmd>textNodeCmd</cmd> ?-disableOutputEscaping? <m>data</m>
+<cmd>textNodeCmd</cmd> ?-disableOutputEscaping? <m>?data?</m>
 </syntax>
+
+<p>If the json type of the created text node is NULL, TRUE or FALSE
+then the <m>data</m> argument is optional, otherwise it this argument
+must be given.</p>
 
 <p>If the optional flag <m>-disableOutputEscaping</m> is given, the
 escaping of the ampersand character (&amp;) and the left angle bracket (&lt;)
