@@ -1,9 +1,9 @@
-C Removed\sdated\scomment.
-D 2024-08-28T22:17:18.554
+C Text\snode\scommands\screated\sby\screateNodeCmd\sof\sthe\sjson\stype\sNULL,\sTRUE\sor\sFALLS\smay\sbe\scalled\swithout\sargument.
+D 2024-08-31T22:46:07.196
 F .fossil-settings/crlf-glob 3fc81610a0f32c43d5830d2e2b08d1a0cbfb74f5
 F .fossil-settings/ignore-glob bdfbbdd88f6c9099755206650cd164eb37aca373
 F .fossil-settings/manifest a09a968bf05a50058f3ad50132730b719bc39e76
-F CHANGES 6db0be48124103850a18eb44677d4b40f3d52c1a67b0c3fcd8aefa605bed4cbd
+F CHANGES 3ad6accd5ea63fed1929cb093a9da3df2014b80d254b5167283f4a5fdc1bd8a9
 F ChangeLog 9b60ec8bfbae84e4f1a97aaee24be00ccea212b7
 F LICENSE 7c00b00fe8e88c48498a54c103dd7df03faeeb039c783279d5fb54dfca307b77
 F MPL_2.0.html 326b847674d6f5846c5b260fb437372e21232c23e3911f3a94f766a62459126c
@@ -20,7 +20,7 @@ F doc/README 706bce83708ba3eb9a81452364ab445c79e63ace
 F doc/category-index.html b4a8d2a4b261d8380849b9fa2b4026f1e08248aab543551db47a34b60a43c69a
 F doc/dom.html 27091fc5af64c7ad6b049a7b7f685015b08d64f2354620834e9e3837a82f8a3e
 F doc/dom.n 59904494c57155c795164652e1d9fb6739b884b650c2e3198d15936229bab192
-F doc/dom.xml 6d76ddbcb3e30eb323e8fec23783addfa38815549021a7a3779231d493ce8471
+F doc/dom.xml e1729f06dfeecd7df903b0d88905186705395e52ee68f19553253207aa7b5a7b
 F doc/domDoc.html e5a43a5e66b4a0fc8d6f93748177519370b3ec7c2e7f829c9b0b2e9e49b3718b
 F doc/domDoc.n 93bf650b2464dbbe728936272e4c1785fbf829800919dcd6b768cfe62982ef8e
 F doc/domDoc.xml b03d5ef30931e59c58ac2bed86f6928e31f1a97f7f1bf0fd6d70e7867f38060f
@@ -144,7 +144,7 @@ F generic/domxpath.h a98836ef133283a20855968b76821042bce16b57b664689a15c017e3fec
 F generic/domxslt.c 7dbf32fe277fd042532ef61f082b945a9c566d606163d066516bd04636cd1a51
 F generic/domxslt.h aeaf957ee38a9e7564bd9f1bed1781de108767df476a0d0776615988d8f04e0f
 F generic/expat_config.h 560c148d431f87fc99ae8553cf998f0d01b0db82
-F generic/nodecmd.c 6f8118cb8044fa44ab839736c8246bab9798999c775dcc616e91660e9e062047
+F generic/nodecmd.c 5bc75cdc1796459a943d397a15c8d52170cc38cb9e3452af9cfb8f12a6d9ef68
 F generic/nodecmd.h 36056ca2c262cb1991cabef8d27992ad628db718d09ff0eeaeaffd150f1549ec
 F generic/schema.c 7acf44a50e38ffc048d140a2595202c1f350c9db55ce3f96fb44e962cf971159
 F generic/schema.h 5e20a348c3f98724e9c118760c8d9fcd661ae8f27d21652d90ab49492d001c75
@@ -203,7 +203,7 @@ F tests/dom.test b9f10b31f3ed7f67032bb19be19b3e3ad8df923515bd690dfcd0f54a5e04682
 F tests/domDoc.test 03082c24746147cc0a5f048820ee3da5c730054828e2a1cdf99b58053ff660f0
 F tests/domNode.bench 3d457513be7908bab88ac0e23e1864f7341e3090
 F tests/domNode.test ee166b7f0e608fb7afb3e841f6c68eeacab84463408b725f2f6992955803e49b
-F tests/domjson.test f384ea9396fe6eb50ce7647ae4d15fafda4452d88796c76e04070be8145df555
+F tests/domjson.test 4c1f850fd7d088c6b6fc51d34ed3cc5219bddc3231aeb08cbbd2e599e7ee3fb7
 F tests/domnamespace.test f68dee13e2325518e96b318bf9fe76ae6903dc38d5602c4b0f48f90c0dc3038c
 F tests/element.test 4c5f0094543ee9167f86748e2d667347f57eb911
 F tests/entity.test 065c6c1af854db838faf9ad56151342eee478f8501a5f65778a144b106108574
@@ -242,8 +242,8 @@ F xe/README 91626be10fa0b48c38184bb73b09eea074008fb082559eaf5c0fb8bb83997903
 F xe/xe 075a1f1c4a5758222c52a4688f9fe22dc3d925e366316cf50d84501c9ca3fdb1 x
 F xe/xe-input fb58cbefe5e3acceb9567a165ef7e655ad08b44e
 F xe/xe.bat 8622c5a70666a58d2316df568354c70593848098
-P 369b4c079ee0505b4365c6a373a16575f70652da7314c2de02e5fea4c7b6cc82
-R 1235618026b1da03f72448f654871b46
+P 51a41c94c6cc02ece135d35451b8917534384c036faffe12133bddca623aa977
+R c800de37c1a10f35c823c92569faf00a
 U rolf
-Z 3d894dfdabb8652b14d8dc80c695f1b0
+Z 74ad6fd69e3415abeca4553ef81f2b6c
 # Remove this line to create a well-formed Fossil manifest.
